AM_CFLAGS               = -std=c99 -pedantic -W -Wall -Wextra -Wno-unused-parameter -Wshadow

sbin_PROGRAMS           = bootcount
bootcount_SOURCES       = bootcount.c dt.c memory.c \
                          am33xx.c am62x.c \
                          stm32mp1.c \
                          i2c_eeprom.c\
                          imx8m.c imx93.c

